Add support for authentication
