# packages/userm/src/schema/authentication.ts
@@ -1,0 +1,16 @@
+/* eslint-disable */
+
+
+/**
+ * 
+ * @export
+ * @interface Authentication
+ */
+export interface Authentication {
+    /**
+     * 
+     * @type {string}
+     * @memberof Authentication
+     */
+    'securityToken'?: string;
+}
