# packages/userm/src/schema/credentials.ts
@@ -1,0 +1,22 @@
+/* eslint-disable */
+
+
+/**
+ * 
+ * @export
+ * @interface Credentials
+ */
+export interface Credentials {
+    /**
+     * 
+     * @type {string}
+     * @memberof Credentials
+     */
+    'username'?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Credentials
+     */
+    'password'?: string;
+}
