# packages/userm/src/schema/index.ts
@@ -1,11 +1,14 @@
+export * from "./authentication"
 export * from "./create-group-request"
 export * from "./create-permission-request"
 export * from "./create-role-request"
 export * from "./create-user-request"
+export * from "./credentials"
 export * from "./error-message"
 export * from "./field-error"
 export * from "./group"
 export * from "./group-links"
+export * from "./logged-in-user"
 export * from "./permission"
 export * from "./permission-links"
 export * from "./product-name"
